--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cross-env": "^7.0.3",
+        "moment": "^2.30.1",
         "mysql2": "^3.10.1",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
