--- a/.env.dev
+++ b/.env.dev
@@ -4,3 +4,9 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_DATABASE=huazhuassociation
+
+# JWT
+JWT_SECRET=secret
+JWT_TOKEN_AUDIENCE=localhost:3000
+JWT_TOKEN_ISSUER=localhost:3000
+JWT_ACCESS_TOKEN_TTL=3600
