--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@nestjs/cache-manager": "^2.2.2",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.2",
         "@nestjs/core": "^10.0.0",
+        "@nestjs/jwt": "^10.2.0",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.3.1",
         "@nestjs/typeorm": "^10.0.2",
+        "cache-manager": "^5.6.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cross-env": "^7.0.3",
+        "joi": "^17.13.3",
         "moment": "^2.30.1",
         "mysql2": "^3.10.1",
         "reflect-metadata": "^0.2.0",
