--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@nestjs-modules/ioredis": "^2.0.2",
         "@nestjs/cache-manager": "^2.2.2",
-        "@nestjs/common": "^10.0.0",
+        "@nestjs/common": "^10.3.10",
         "@nestjs/config": "^3.2.2",
         "@nestjs/core": "^10.0.0",
         "@nestjs/jwt": "^10.2.0",
@@ -32,9 +33,11 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cross-env": "^7.0.3",
+        "ioredis": "^5.4.1",
         "joi": "^17.13.3",
         "moment": "^2.30.1",
         "mysql2": "^3.10.1",
+        "redis": "^4.6.15",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
         "swagger-ui-express": "^5.0.1",
